// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BED weird 1`] = `
{
  "chrom": "1",
  "chromEnd": 25737913,
  "chromStart": 25608494,
  "field5": "SRHB01000779.1",
  "field6": "24831980",
  "field7": "D",
  "name": ".",
  "score": 96.44058642,
  "strand": 0,
}
`;

exports[`BED3 1`] = `
{
  "chrom": "contigA",
  "chromEnd": 10884,
  "chromStart": 10875,
  "strand": 0,
}
`;

exports[`BED3 2`] = `
{
  "chrom": "co,tigA",
  "chromEnd": 10884,
  "chromStart": 10875,
  "strand": 0,
}
`;

exports[`BED6 1`] = `
{
  "chrom": "contigA",
  "chromEnd": 10884,
  "chromStart": 10875,
  "name": "test",
  "score": 0.5,
  "strand": -1,
}
`;

exports[`BED6 2`] = `
{
  "chrom": "co,tigA",
  "chromEnd": 10884,
  "chromStart": 10875,
  "name": "test2",
  "score": 0,
  "strand": 1,
}
`;

exports[`BED6 3`] = `
{
  "chrom": "cotigA",
  "chromEnd": 10884,
  "chromStart": 10875,
  "field4": ".",
  "field5": ".",
  "name": "test2",
  "strand": 0,
}
`;

exports[`BED12 1`] = `
{
  "blockCount": 2,
  "blockSizes": [
    567,
    488,
  ],
  "blockStarts": [
    0,
    3512,
  ],
  "chrom": "chr22",
  "chromEnd": 5000,
  "chromStart": 1000,
  "itemRgb": "0",
  "name": "cloneA",
  "score": 960,
  "strand": 1,
  "thickEnd": 5000,
  "thickStart": 1000,
}
`;

exports[`BED12 2`] = `
{
  "blockCount": 2,
  "blockSizes": [
    433,
    399,
  ],
  "blockStarts": [
    0,
    3601,
  ],
  "chrom": "chr22",
  "chromEnd": 6000,
  "chromStart": 2000,
  "itemRgb": "0",
  "name": "cloneB",
  "score": 900,
  "strand": -1,
  "thickEnd": 6000,
  "thickStart": 2000,
}
`;

exports[`bigChain 1`] = `
{
  "chainScore": 66,
  "chrom": "chr22_KI270731v1_random",
  "chromEnd": 133710,
  "chromStart": 133689,
  "name": "530549",
  "qEnd": 80144725,
  "qName": "chr16",
  "qSize": 98207768,
  "qStart": 80144720,
  "score": 1000,
  "strand": -1,
  "tSize": 150754,
}
`;

exports[`bigGenePred 1`] = `
{
  "blockCount": 3,
  "blockSizes": [
    359,
    109,
    1189,
  ],
  "cdsEndStat": "none",
  "cdsStartStat": "none",
  "chrom": "chr1",
  "chromEnd": 14409,
  "chromStart": 11868,
  "chromStarts": [
    0,
    744,
    1352,
  ],
  "exonFrames": [
    -1,
    -1,
    -1,
  ],
  "geneName": "ENST00000456328.2",
  "geneName2": "DDX11L1",
  "geneType": "none",
  "name": "ENST00000456328.2",
  "name2": "DDX11L1",
  "reserved": "255,128,0",
  "score": 1000,
  "strand": 1,
  "thickEnd": 11868,
  "thickStart": 11868,
  "type": "none",
}
`;

exports[`bigGenePred 2`] = `
{
  "blockCount": 11,
  "blockSizes": [
    98,
    34,
    152,
    159,
    198,
    136,
    137,
    147,
    99,
    154,
    37,
  ],
  "cdsEndStat": "none",
  "cdsStartStat": "none",
  "chrom": "chr1",
  "chromEnd": 29570,
  "chromStart": 14403,
  "chromStarts": [
    0,
    601,
    1392,
    2203,
    2454,
    2829,
    3202,
    3511,
    3864,
    10334,
    15130,
  ],
  "exonFrames": [
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
  ],
  "geneName": "ENST00000488147.1",
  "geneName2": "WASH7P",
  "geneType": "none",
  "name": "ENST00000488147.1",
  "name2": "WASH7P",
  "reserved": "255,128,0",
  "score": 1000,
  "strand": -1,
  "thickEnd": 14403,
  "thickStart": 14403,
  "type": "none",
}
`;

exports[`bigInteract 1`] = `
{
  "chrom": "chr3",
  "chromEnd": 63705638,
  "chromStart": 63702628,
  "color": "0",
  "score": 584,
  "sourceChrom": "chr17",
  "sourceEnd": 58880897,
  "sourceStart": 58878552,
  "strand": 0,
  "targetChrom": "chr3",
  "targetEnd": 63705638,
  "targetStart": 63702628,
  "value": "10",
}
`;

exports[`bigLink 1`] = `
{
  "chrom": "chr22_KI270731v1_random",
  "chromEnd": 7918,
  "chromStart": 7917,
  "name": "2912",
  "qStart": 75185566,
  "strand": 0,
}
`;

exports[`bigMaf 1`] = `
{
  "chrom": "chr22_KI270731v1_random",
  "chromEnd": 2,
  "chromStart": 0,
  "mafBlock": "a score=60.000000;s hg38.chr22_KI270731v1_random        0 2 +   150754 AC;s canFam3.chr26                27974205 2 + 38964690 AT;",
  "strand": 0,
}
`;

exports[`bigNarrowPeak 1`] = `
{
  "chrom": "chr1",
  "chromEnd": 566953,
  "chromStart": 566753,
  "pValue": 5.54347,
  "peak": 154,
  "qValue": 4.80079,
  "score": 468,
  "signalValue": 103.84,
  "strand": 0,
}
`;

exports[`bigNarrowPeak 2`] = `
{
  "chrom": "chr1",
  "chromEnd": 566953,
  "chromStart": 566753,
  "pValue": 5.54347,
  "peak": 154,
  "qValue": 4.80079,
  "score": 468,
  "signalValue": 103.84,
  "strand": 0,
  "uniqueId": "1",
}
`;

exports[`bigPsl 1`] = `
{
  "blockCount": 3,
  "blockSizes": [
    354,
    109,
    1141,
  ],
  "chrom": "chr1",
  "chromEnd": 14361,
  "chromSize": 248956422,
  "chromStart": 11873,
  "chromStarts": [
    0,
    739,
    1347,
  ],
  "match": 1579,
  "misMatch": 25,
  "nCount": 0,
  "name": "mAM992877",
  "oCDS": "",
  "oChromEnd": 1604,
  "oChromSize": 1604,
  "oChromStart": 0,
  "oChromStarts": [
    0,
    354,
    463,
  ],
  "oSequence": "",
  "oStrand": "+",
  "repMatch": 0,
  "reserved": 0,
  "score": 1000,
  "seqType": 0,
  "strand": 1,
  "thickEnd": 14361,
  "thickStart": 11873,
}
`;

exports[`bigPsl 2`] = `
{
  "blockCount": 3,
  "blockSizes": [
    354,
    109,
    1141,
  ],
  "chrom": "chr1",
  "chromEnd": 14361,
  "chromSize": 248956422,
  "chromStart": 11873,
  "chromStarts": [
    0,
    739,
    1347,
  ],
  "match": 1579,
  "misMatch": 25,
  "nCount": 0,
  "name": "mAM992877",
  "oCDS": "365..502",
  "oChromEnd": 1604,
  "oChromSize": 1604,
  "oChromStart": 0,
  "oChromStarts": [
    0,
    354,
    463,
  ],
  "oSequence": "cttgccgtcagccttttctttgacctcttctttctgttcatgtgtatctgctgtctcttagcccagacttcccgtgtcctttccaccgggcctttgggaggtcacagggtcttgatgctgtggtcttgatctgcaggtgtctgacttccagcaactgctggcctgtgccagggtggaagctgagcactggagtggagttttcctgtggagaggagccatgcctagagtgggatgggccattgttcatattctggcccctgttgtctgcatgtaacctaataccacgaccaggcatgggggaaagattggaggaaagttgagtgagaggatcaacttctctgacaacctaggccagtgtgtggtgatgccaggcatgcccttccccagcatcaggtctccagagctgcagaagacgacggccgacttggatcacactcttgtgagtgtccccagtgttgcagaggcagggccatcaggcaccaaagggattctgccagcatagtgctcctggaccagtgatacacccggcaccctgtcctggacaggctgttggcctggatctgagccctcgtggaggtcaaagccacctttggttctgccattactgctgtgtggaagttcactcctgccttttcctttcccgagagcctccaccaccccgagatcgcatttctcactgccttttgtctgcccagtttcaccagaagtaggcctcttcctgacaggcagctgcaccactgcctggcgctgcgcccttcctttgctctgcccgctggagacggtgtttgtcatgggcctggtctgcagggatcctgctacaaaggtgaaacccaggagagtgtggagtccagagtgttgccaggacccaggcacaggcattagtgcccgttggagaaaacaggggaatcccgaagaaatggtgggttttggccatccgtgagatcttcccagggcagctcccctctgtggaatccaatctgtcttccatcctgcgtggccgagggccaggcttctcactgggcctctgcaggaggctgccatttgtcctgcccaccgtcttagaagcgagacggagcagactcatctgctactgccctttctataataactaaagttagctgccctggactattcaccccctagtctcaatttaaaaagatccccatggccacagggcccctgcctgggggcttgtcacctcccccaccttcttcctgagtcacttctgcagccttgctccctaacctgccccacagccttgcctggatttctatctccctggcttggtgccagttcctccaagtcgatggcacctccctccctctcaaccacttgagcaaactccaagacatcttctaccccaacaccagcaattgtgccaagggccattaggctctcagcatgactatttttagagaccccgtgtctgtcactgaaaccttttttgtgggagactattcctcccatctgcaacagctgcccctgctgacggcccttctctcctccctctcatcccagagaaacaggtcagctgggagcttctgcccccactgcctagggaccaacaggggcaggaggcagtcactgaccccgagacgtttgca",
  "oStrand": "+",
  "repMatch": 0,
  "reserved": 0,
  "score": 1000,
  "seqType": 1,
  "strand": 1,
  "thickEnd": 13259,
  "thickStart": 12622,
}
`;

exports[`gdc cancer 1`] = `
{
  "Entrez_Gene_Id": "2782",
  "Hugo_Symbol": "GNB1",
  "Matched_Norm_Sample_Barcode": "TCGA-OR-A5KB-11A-11D-A30A-10",
  "Reference_Allele": "T",
  "Tumor_Sample_Barcode": "TCGA-OR-A5KB-01A-11D-A30A-10",
  "Tumor_Seq_Allele1": "T",
  "Tumor_Seq_Allele2": "G",
  "Variant_Classification": "Splice_Region",
  "Variant_Type": "SNP",
  "alcohol_history": "--",
  "alcohol_intensity": "--",
  "blockCount": 1,
  "blockSizes": [
    1,
  ],
  "bmi": "--",
  "case_id": "09454ed6-64bc-4a35-af44-7c4344623d45",
  "chrom": "chr1",
  "chromEnd": 10,
  "chromStart": 1,
  "chromStarts": [
    0,
  ],
  "cigarettes_per_day": "--",
  "days_to_death": "--",
  "dbSNP_RS": "novel",
  "dbSNP_Val_Status": "",
  "ethnicity": "not hispanic or latino",
  "freq": "0.0108695652174",
  "gender": "female",
  "height": "--",
  "name": "T>G",
  "project_id": "TCGA-ACC",
  "reserved": "0,0,0",
  "sampleCount": "1",
  "score": 1,
  "strand": 0,
  "thickEnd": 1815757,
  "thickStart": 1815756,
  "weight": "--",
  "years_smoked": "--",
}
`;

exports[`mafFrames 1`] = `
{
  "chrom": "chr22_KI270731v1_random",
  "chromEnd": 12574,
  "chromStart": 11287,
  "frame": "0",
  "isExonEnd": "1",
  "isExonStart": "1",
  "name": "ENST00000619792.1",
  "nextFramePos": -1,
  "prevFramePos": -1,
  "src": "hg38",
  "strand": -1,
}
`;

exports[`mafSummary 1`] = `
{
  "chrom": "chr22_KI270731v1_random",
  "chromEnd": 9270,
  "chromStart": 0,
  "leftStatus": "",
  "rightStatus": "",
  "score": 0.568679,
  "src": "canFam3",
  "strand": 0,
}
`;

exports[`real world 1`] = `
{
  "comment": "UCSC Genes for chr7 with color plus GeneSymbol and SwissProtID",
  "fields": [
    {
      "arrayIsNumeric": undefined,
      "comment": "Reference sequence chromosome or scaffold",
      "isArray": undefined,
      "isNumeric": false,
      "name": "chrom",
      "type": "string",
    },
    {
      "arrayIsNumeric": undefined,
      "comment": "Start position of feature on chromosome",
      "isArray": undefined,
      "isNumeric": true,
      "name": "chromStart",
      "type": "uint",
    },
    {
      "arrayIsNumeric": undefined,
      "comment": "End position of feature on chromosome",
      "isArray": undefined,
      "isNumeric": true,
      "name": "chromEnd",
      "type": "uint",
    },
    {
      "arrayIsNumeric": undefined,
      "comment": "Name of gene",
      "isArray": undefined,
      "isNumeric": false,
      "name": "name",
      "type": "string",
    },
    {
      "arrayIsNumeric": undefined,
      "comment": "Score",
      "isArray": undefined,
      "isNumeric": true,
      "name": "score",
      "type": "uint",
    },
    {
      "arrayIsNumeric": false,
      "comment": "+ or - for strand",
      "isArray": false,
      "isNumeric": false,
      "name": "strand",
      "size": 1,
      "type": "char",
    },
    {
      "arrayIsNumeric": undefined,
      "comment": "Coding region start",
      "isArray": undefined,
      "isNumeric": true,
      "name": "thickStart",
      "type": "uint",
    },
    {
      "arrayIsNumeric": undefined,
      "comment": "Coding region end",
      "isArray": undefined,
      "isNumeric": true,
      "name": "thickEnd",
      "type": "uint",
    },
    {
      "arrayIsNumeric": undefined,
      "comment": "Green on + strand, Red on - strand",
      "isArray": undefined,
      "isNumeric": true,
      "name": "reserved",
      "type": "uint",
    },
    {
      "arrayIsNumeric": undefined,
      "comment": "Gene Symbol",
      "isArray": undefined,
      "isNumeric": false,
      "name": "geneSymbol",
      "type": "string",
    },
    {
      "arrayIsNumeric": undefined,
      "comment": "SWISS-PROT protein Accession number",
      "isArray": undefined,
      "isNumeric": false,
      "name": "spID",
      "type": "string",
    },
  ],
  "name": "hg18KGchr7",
  "type": "table",
}
`;
